ampache/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ampache
spec:
  type: NodePort
  ports:
   - nodePort: 30164
     port: 80
     targetPort: 80
  selector:
    app: ampache
